--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
     <div class="room-list-wrapper">
         <ul class="room-list">
             <li class="room">
-               <p class="room-list-text">room 1</p>
-               <div class="color room-1"></div>
+               <p class="room-list-text">room</p>
+               <div class="color room-1">1</div>
             </li>
 
             <li class="room">
-                <p class="room-list-text">room 2</p>
-                <div class="color room-2"></div>
+                <p class="room-list-text">room</p>
+                <div class="color room-2">2</div>
             </li>
 
             <li class="room">
-                <p class="room-list-text">room 3</p>
-                <div class="color room-3"></div>
+                <p class="room-list-text">room</p>
+                <div class="color room-3">3</div>
             </li>
 
             <li class="room">
-                <p class="room-list-text">room 4</p>
-                <div class="color room-4"></div>
+                <p class="room-list-text">room</p>
+                <div class="color room-4">4</div>
             </li>
         </ul>
     </div>
