fix elements position, add instruction, remove hover from date

--- a/index.html
+++ b/index.html
@@ -55,5 +55,19 @@
             </li>
         </ul>
     </div>
+    <div class="button-wrapper active-button">
+        <button class="inst-button" type="button">Show: instrukcje do sprzątania</button>
+        <div class="info-wrapper info-inactive"><p class="instrukcja">1)Zamiatać we wspólnych pomieszczeniach - raz w tygodniu.<br>
+            2)Czyszczenie na mokro we wspólnych pomieszczeniach - raz w tygodniu.<br>
+            3)Pranie dywanów, szmat podłogowych, ręczników kuchennych - raz w tygodniu</p>
+        <p class="instrukcja">Kuchnia:<br>
+            Okap, zlewozmywak, płytki nad kuchenką, szafki, lodówka - w ciągu tygodnia<br>
+            Wyjmij śmieci, ułóż czyste naczynia, utrzymuj kuchenkę w czystości - w ciągu tygodnia</p>
+        <p class="instrukcja">Toaleta:<br>
+            Umywalka, WC - raz w tygodniu</p>
+        <p class="instrukcja">Łazienka:<br>
+            Umywalka, lustro, kabina prysznicowa, wanna - raz w tygodniu</p>
+        </div>
+    </div>
 </body>
 </html>
